--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "typescript": "^3.9.10",
     "webpack": "^5.61.0",
     "webpack-dev-server": "^4.4.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
